<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/custom_transaction"
    android:theme="@style/Theme.DAM_Proiect">

    <TextView
        android:id="@+id/tr_lv_date"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/tr_lv_dateT"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tr_lv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/transaction_lv_amountT"
        android:textColor="#C50606"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/tr_iv_picture"
        android:background="@drawable/money"
        app:layout_constraintTop_toBottomOf="@id/tr_lv_amount"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tr_lv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tr_lv_descriptionT"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/tr_iv_picture"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tr_lv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_lv_Category"
        android:textSize="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tr_lv_Person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_lv_Person"
        android:textSize="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toEndOf="@id/tr_lv_category"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tr_iv_picture"
        />

</androidx.constraintlayout.widget.ConstraintLayout>