<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bank_cl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_bank"
    android:theme="@style/Theme.DAM_Proiect">

    <ImageView
        android:id="@+id/bank_view_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_baseline_banks_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bank_view_bankName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/bank_view_bankNameT"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@id/bank_view_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bank_view_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/bank_view_originT"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bank_view_originT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/bank_view_originT"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bank_view_origin" />

    <ImageView
        android:id="@+id/bank_view_picture2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_baseline_employee_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bank_view_picture" />

    <TextView
        android:id="@+id/bank_view_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/bank_view_employeeT"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@id/bank_view_picture"
        app:layout_constraintTop_toBottomOf="@id/bank_view_bankName" />

    <TextView
        android:id="@+id/bank_view_employeeT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:text="@string/bank_view_employeeTT"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@id/bank_view_employee"
        app:layout_constraintTop_toBottomOf="@id/bank_view_bankName" />

    <ImageView
        android:id="@+id/bank_view_picture3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_baseline_income_on_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bank_view_picture2" />

    <TextView
        android:id="@+id/bank_view_netIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/bank_view_netIncomeT"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@id/bank_view_picture"
        app:layout_constraintTop_toBottomOf="@id/bank_view_employee" />

    <TextView
        android:id="@+id/bank_view_netIncomeT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/bank_view_netIncomeTT"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@id/bank_view_netIncome"
        app:layout_constraintTop_toBottomOf="@id/bank_view_employee" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bank_cl1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_cl2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/bank_view_netIncome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/bank_view_picture4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_baseline_manager_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/bank_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/bank_view_nameT"
            android:textSize="18dp"
            app:layout_constraintStart_toEndOf="@id/bank_view_picture4"
           app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bank_view_ageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/bank_view_ageText"
            android:textSize="18dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/bank_view_picture4"
          />

        <TextView
            android:id="@+id/bank_view_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/bank_view_ageT"
            android:textSize="18dp"
            app:layout_constraintStart_toEndOf="@id/bank_view_ageText"
          app:layout_constraintTop_toBottomOf="@id/bank_view_picture4" />

        <TextView
            android:id="@+id/bank_view_netWorthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/bank_view_netWorthText"
            android:textSize="18dp"
          app:layout_constraintEnd_toStartOf="@id/bank_view_netWorth"
           app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bank_view_netWorth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/bank_view_netWorthT"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/bank_view_netWorthT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/bank_view_netWorthTexttt"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/bank_view_netWorth" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>