<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/custom_coupon"
    android:theme="@style/Theme.DAM_Proiect">

    <TextView
        android:id="@+id/coupon_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:textSize="22dp"
        android:text="@string/coupon_view_nameT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/coupon_view_picture"
        app:layout_constraintStart_toEndOf="@id/coupon_view_name"
        app:layout_constraintEnd_toStartOf="@id/coupon_view_expDate"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:background="@drawable/coupons"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/coupon_view_expDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="18dp"
        android:text="@string/coupon_view_expDateT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/coupon_view_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/green_1"
        android:textSize="20dp"
        android:text="@string/coupon_view_discountT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coupon_view_name"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>