<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:theme="@style/Theme.DAM_Proiect"
    tools:context=".util.DiscountCouponsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl3_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/white_boxing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_hint_coupon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/coupon_hint"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/lv_coupons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_btn5"
        app:layout_constraintBottom_toTopOf="@id/btn_coupon_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coupon_til_expDate"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_coupon_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_btn"
        android:text="@string/coupon_clear_fields"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_coupon_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_btn"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/coupon_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_coupon_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_btn"
        android:text="@string/coupon_save"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_coupon_delete"
        app:layout_constraintStart_toEndOf="@id/btn_coupon_clear"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/coupon_til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/custom_coupon2"
           app:layout_constraintTop_toBottomOf="@id/cl3_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/coupon_tiet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/coupon_tiet_nameT" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/coupon_til_discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_coupon2"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/coupon_til_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/coupon_tiet_discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/coupon_tiet_discountT" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/coupon_til_expDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_coupon2"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/coupon_til_discount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/coupon_tiet_expDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/coupon_tiet_expDateT" />
        </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>